# internal/connector/internal/api/private/api/openapi.yaml
@@ -795,15 +795,14 @@ components:
     KnativeConnectionSettings:
       description: Holds the configuration to connect to a Knative service.
       properties:
+        apiVersion:
+          type: string
         kind:
-          enum:
-          - channel
-          - endpoint
-          - broker
           type: string
         name:
           type: string
       required:
+      - apiVersion
       - kind
       - name
       type: object
